Update config file

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,13 @@
 {
   "token": "",
   "prefix": "!",
-  "randomFolder": ""
+  "randomFolder": "",
+  "scanFolder": "",
+  "database" : {
+    "dialect" : "",
+    "host" : "",
+    "database_name" :"",
+    "username" :"",
+    "password" :"" 
+  }
 }
