--- a/config/log_config.json
+++ b/config/log_config.json
@@ -2,26 +2,33 @@
     "appenders": {
       "everything": {
         "type": "file",
+        "encoding": "utf-8",
         "filename": "logs/all-the-logs.log"
       },
       "emergencies": {
         "type": "file",
         "filename": "logs/error.log"
       },
-      "console": {
-        "type": "console",
-        "layout": {
-			"type": "pattern",
-			"pattern": "%[[%d{dd-MM-yyyy hh:mm:ss.SSS}] [%p] %c -%] %m"
-		}
-      },
       "just-errors": {
         "type": "logLevelFilter",
         "level": "error",
         "appender": "emergencies"
+      },
+      "console": {
+        "type": "console",
+        "category": "consoleshow",
+        "layout": {
+          "type": "pattern",
+          "pattern": "%[[%d{dd-MM-yyyy hh:mm:ss.SSS}] [%p] %c -%] %m"
+        }
+      },
+      "just-info": {
+        "type": "logLevelFilter",
+        "level": "info",
+        "appender": "console"
       }
     },
     "categories": {
-      "default": { "appenders": [ "just-errors", "everything","console" ], "level": "trace" }
+      "default": { "appenders": [ "just-errors", "everything","just-info" ], "level": "trace" }
     }
   }
