--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.2.0",
+    "jsmediatags": "^3.9.3",
     "log4js": "^6.3.0",
-    "nconf": "^0.10.0"
+    "mysql2": "^2.2.5",
+    "nconf": "^0.10.0",
+    "sequelize": "^6.3.5"
   }
 }
