--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bot discord",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,9 @@
     "mysql2": "^2.2.5",
     "nconf": "^0.10.0",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.12.1"
   }
 }
