--- a/.github/workflows/githubAction.yml
+++ b/.github/workflows/githubAction.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Run eslint and deploy on device (no device rigth now)
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  Eslint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -21,5 +21,17 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install module...
       run: npm ci
-    - name: Run Eslint
-      run: npm run lint
+  
+  Deploy:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Deploy to ???
