--- a/.github/workflows/githubAction.yml
+++ b/.github/workflows/githubAction.yml
@@ -24,7 +24,22 @@ jobs:
     - name: Check with Eslint...
       run: npm run lint
   
-  Deploy:
+  Deploy on ubutu:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Deploy to ???
+      run: npm --version
+
+  Deploy on raspbian:
     runs-on: ubuntu-latest
     strategy:
       matrix:
