--- a/.github/workflows/githubAction.yml
+++ b/.github/workflows/githubAction.yml
@@ -14,13 +14,17 @@ jobs:
         node-version: [14.x]
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    
     - name: Install module...
       run: npm ci
+    
     - name: Check with Eslint...
       run: npm run lint
  
